@@ -22,6 +22,9 @@ IMPROVEMENTS:
   ZOOKEEPER-2557: Update gitignore to account for other file extensions.
   (Edward Ribeiro via cnauroth)
 
+  ZOOKEEPER-2594: Use TLS for downloading artifacts during build
+  (Olaf Flebbe via phunt)
+
 Release 3.4.9 - 2016-08-23
 
 Backward compatible changes:
